#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999933 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999932 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999931 released.

        * Fixed logout of localhost handle.


2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999930 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Fixed untar for Berkeley DB.


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999929 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Fixed exec for AWS Micro Server.


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999928 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Added memory check.


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999927 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Removed Sub::Quote from Makefile.PL


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999926 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * More dependencies & ordering in Makefile.PL


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999925 released.
