@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 62aaef361d4248d61197a70865f3837649ca5724 ChangeLog
+SHA1 7f73a0c439c99085a213d2c85c326c9cb35fe305 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 474774c8c55c67cffeb048af1260afb584ac5825 META.yml
-SHA1 9f85203040dc6ba350191c9e645e56080229dcef Makefile.PL
+SHA1 eb9fa526314104a41f46cf96a84bb4b74f6bcc40 META.yml
+SHA1 bacc3edae7d091dd380af3a0ace424a96c2d27b1 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTtV7qAAoJEBa/9Pad787ENwgIAI8sW258Q1NzITwYfyBOzxdo
-KZ4+n64/oQa1i3mciBtm9PLISXra5omYWx+wBCD7UVVZdP2uarE0Azsu1vLgy8Sd
-Ph5wa2hyuJWUBk0T4UVqVKqTzQkx6DqbSknw7Q9MKpWAXGQBQXPAJ//B1ejLFLza
-eptO9MQzP5clP73jJc7PpP343kNj20ihp/ccTjU9/mJO7faHhUG77AIMKlDOrpZs
-EmMlFwqXfXpt6zZiGxh5DtHbBbnAf1anzyfn5iltC7Zs2rFt1sxICntjdiGGIV22
-8S8D+TKXfj7t7D/E+PbE0PScTqyHERu1zo4KFzQMpGNgdGXGsUU0mvfheC2DUrw=
-=iVQh
+iQEcBAEBAgAGBQJTtWWVAAoJEBa/9Pad787E0uYIAIE2U2/1aDQmdpf7HVJv1zWp
+dvgTJ268PVp7xNVJgH75uJNsdDb1eDpCCydOwPXxzZXCyxp8WtMg9L/3Hiuna/nx
+be6O1rqIAspHJTIQafHxY8r1A2LiJNICFtBRYnW4KgP/UtrYZpmL6dNfZQpGo3kt
+IrxxOBPNVkzYgHAvqsKq+XH+W1AQuhv2FvV48WDr41o5Mv5AmC6nZBtV7U4dh56X
++WBH4JFoIIMHxAbS9tiBM4qI7moWaghc4PDbLS8nZsDyS/E+I/XoIF8CKsVbReq4
+ngLmbvLgwiqpwk7FwNGeOepOQc8KcRu5kKAj76wnJsMjc62djRG5GaJ/n35weMc=
+=RKJx
 -----END PGP SIGNATURE-----
